kubernetes/flask-deployment.yml
# https://testdriven.io/blog/running-flask-on-kubernetes/#minikube

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: blorsch/qotd-backend:latest
      restartPolicy: Always
