kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    service: backend
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
