kubernetes/postgres-service.yml
# https://testdriven.io/blog/running-flask-on-kubernetes/#minikube

apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    service: postgres
spec:
  selector:
    service: postgres
  type: ClusterIP
  ports:
  - port: 5432
